--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>slider</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -17,10 +17,9 @@
         <div class="pictures">
           <img style="width:100%" src="http://lifestylepubs.wordpress.s3-us-west-2.amazonaws.com/app/uploads/prod/2016/05/TrailRidge-1200x700.jpg" alt="">
         </div>
-        <a href="#" onclick="turns(-1)" class="prev">&#10094</a>
-        <a href="#" onclick="turns(1)"class="next">&#10095</a>
+        <a href="#" onclick="turns(-1)" class="prev">&#10094;</a>
+        <a href="#" onclick="turns(1)" class="next">&#10095;</a>
       </div>
-
     <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
